gcc/testsuite/rust/rustc/ui/parser/issues/issue-91461_dg.rs
fn main() {
    a(_:b:,)
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
}

